--- a/Zookeeper (Kotlin)/Sustainable care  3/task-info.yaml
+++ b/Zookeeper (Kotlin)/Sustainable care  3/task-info.yaml
@@ -8,5 +8,9 @@ files:
     visible: false
     learner_created: false
 feedback_link: https://hyperskill.org/learn/step/14136#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Well done! You've finished the project. Select a new project on <a href="https://hyperskill.org/projects">Hyperskill</a>
+    to continue learning.
+  time: "Tue, 19 Nov 2024 23:33:53 UTC"
 record: -1
