--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://cogniterra.org/media/attachments/lesson/25643/additional_files.json
   is_template_based: true
   use_ide: true
-update_date: "Mon, 18 Nov 2024 23:14:45 UTC"
+update_date: "Tue, 19 Nov 2024 22:16:06 UTC"
 stages:
   - id: 975
     step: 14133
@@ -16,7 +16,7 @@ stages:
     is_completed: true
   - id: 978
     step: 14136
-    is_completed: false
+    is_completed: true
 topics:
   0:
     - title: Introduction to Kotlin
